# h265nal-rs

./: .gitignore  .prototools  AGENTS.md  CMakeLists.txt  Cargo.toml  README.md  RELEASE.md  STYLE.md  release.toml
.github/workflows/: ci.yml  release-dry-run.yml  release.yml
crates/h265nal-cli/: Cargo.toml
crates/h265nal-cli/src/: logger.rs  main.rs
crates/h265nal-cli/src/app/: mod.rs  run_parse.rs
crates/h265nal-cli/src/cli/: args.rs  output_format.rs
crates/h265nal-cli/src/config/: mod.rs  normalize.rs  runtime_options.rs
crates/h265nal-cli/src/ffi/: parser.rs
crates/h265nal-cli/src/render/: c_output.rs  json_output.rs  mod.rs  pretty_output.rs
crates/h265nal-cli/tests/: info_error.rs  renderers.rs  smoke.rs
crates/h265nal-parity/: Cargo.toml
crates/h265nal-sys/: Cargo.toml  build.rs
crates/h265nal-sys/native/: CMakeLists.txt
crates/h265nal-sys/native/include/: h265_c_api.h
crates/h265nal-sys/native/src/: h265_c_api.cc
crates/h265nal-sys/src/: annexb.rs  aud.rs  bitstream.rs  common.rs  configuration_box.rs  constants.rs  error.rs  ffi.rs  hrd_parameters.rs  lib.rs  nal_unit.rs  pps.rs  pps_multilayer_extension.rs  pps_scc_extension.rs  pred_weight_table.rs  profile_tier_level.rs  rtp.rs  scaling_list_data.rs  sei.rs  slice_segment_layer.rs  sps.rs  sps_3d_extension.rs  sps_multilayer_extension.rs  sps_range_extension.rs  sps_scc_extension.rs  st_ref_pic_set.rs  state.rs  sub_layer_hrd_parameters.rs  utils.rs  vps.rs  vui_parameters.rs
crates/h265nal-sys/tests/: smoke.rs
crates/h265nal-test-ports/: Cargo.toml
docker/: .env.example  baseline.Dockerfile  compose.yml  local.Dockerfile
docker/scripts/: baseline_entry.sh  local_entry.sh  run-baseline.sh  run-local.sh
docs/examplees/: README.md  akiyo_qp30.c.out  akiyo_qp30_dump.c.out  cli-output-examples.md  downloads-h265-run.md  iphone_pretty.out
docs/plans/: h265nal-c-abi-cli-minimal.plan.md  h265nal-c-abi-contract.md  h265nal-c-abi-full-coverage.plan.md  h265nal-cargo-build.plan.md  h265nal-cli-feature-parity.plan.md  h265nal-docker-dual-cli-parity.plan.md  h265nal-parity-matrix.todo.md  h265nal-rust-cli-mvp-1to1.plan.md  h265nal-rust-native-suite-wrapper.plan.md  h265nal-rust-test-port-groups.plan.md  h265nal-rust-test-port-missing-features.md  h265nal-rust-test-port-trigger.prompt.md
docs/reports/: 2026-03-03-cli-abi-progress-sequenced.report.md  2026-03-03-docker-dual-cli-parity-phase1-mvp.report.md  2026-03-03-minimal-c-abi-cli-slice.report.md  2026-03-03-native-suite-wrapper-pass1.report.md  2026-03-03-pps-fdump-crash-hardening-fix.report.md  2026-03-03-pps-fdump-crash-native-isolation.report.md  2026-03-04-c-abi-divergence-tracker.report.md  README.md  {issue}.report.md  (+1 more)
include/: h265_c_api.h
scripts/: build.sh.ts  cargo-release.sh
src/: CMakeLists.txt  h265_c_api.cc  h265_pps_parser.cc
test/: CMakeLists.txt
(+209 files in other folders)
