[package]
name = "h265nal-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "h265nal-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
h265nal-sys = { version = "0.1.1", path = "../h265nal-sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
