[package]
name = "h265nal-cli"
version.workspace = true
edition = "2021"
description = "CLI for parsing HEVC/H.265 bitstreams with h265nal"
license = "BSD-3-Clause"
repository = "https://github.com/CursedFactory/h265nal-rs"
homepage = "https://github.com/CursedFactory/h265nal-rs"
documentation = "https://docs.rs/h265nal-cli"

[[bin]]
name = "h265nal-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
h265nal-sys = { version = "0.1.1", path = "../h265nal-sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
